[gd_scene load_steps=6 format=3 uid="uid://i18bwfti3ecg"]

[ext_resource type="Script" uid="uid://ds4urqgbry2g5" path="res://UI/Crafting/crafting_row.gd" id="1_ncldr"]
[ext_resource type="Texture2D" uid="uid://hoqmxhp5bhdr" path="res://Assets/0x72_16x16RobotTileset.v1.png" id="2_pu1rd"]
[ext_resource type="PackedScene" uid="uid://lteqvs7mwld4" path="res://UI/Crafting/crafting_row_item.tscn" id="3_c7tgv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1dm2y"]
atlas = ExtResource("2_pu1rd")
region = Rect2(152, 128, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_cwtle"]
atlas = ExtResource("2_pu1rd")
region = Rect2(264, 88, 8, 8)

[node name="CraftingRow" type="Control"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
script = ExtResource("1_ncldr")
crafting_row_item_packed_scene = ExtResource("3_c7tgv")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="CraftButtonMargin" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8

[node name="CraftButton" type="Button" parent="MarginContainer/HBoxContainer/CraftButtonMargin"]
unique_name_in_owner = true
layout_mode = 2
text = "Craft"

[node name="CraftsItemsLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Crafts: "

[node name="CraftingItemsMargin" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4

[node name="CraftingItemsHbox" type="HBoxContainer" parent="MarginContainer/HBoxContainer/CraftingItemsMargin"]
unique_name_in_owner = true
layout_mode = 2

[node name="CostsLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Costs:"

[node name="CostsSteelMargin" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="CostsSteelHbox" type="HBoxContainer" parent="MarginContainer/HBoxContainer/CostsSteelMargin"]
layout_mode = 2

[node name="CostsSteelIcon" type="TextureRect" parent="MarginContainer/HBoxContainer/CostsSteelMargin/CostsSteelHbox"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
texture = SubResource("AtlasTexture_1dm2y")
expand_mode = 1
stretch_mode = 5

[node name="CostsSteelLabel" type="Label" parent="MarginContainer/HBoxContainer/CostsSteelMargin/CostsSteelHbox"]
unique_name_in_owner = true
layout_mode = 2
text = "3"

[node name="CostsBatteriesMargin" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="CostsBatteriesHbox" type="HBoxContainer" parent="MarginContainer/HBoxContainer/CostsBatteriesMargin"]
layout_mode = 2

[node name="CostsBatteriesIcon" type="TextureRect" parent="MarginContainer/HBoxContainer/CostsBatteriesMargin/CostsBatteriesHbox"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
texture = SubResource("AtlasTexture_cwtle")
expand_mode = 1
stretch_mode = 5

[node name="CostsBatteriesLabel" type="Label" parent="MarginContainer/HBoxContainer/CostsBatteriesMargin/CostsBatteriesHbox"]
unique_name_in_owner = true
layout_mode = 2
text = "1"

[node name="CostsItemsMargin" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4

[node name="CostItemsHbox" type="HBoxContainer" parent="MarginContainer/HBoxContainer/CostsItemsMargin"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[connection signal="pressed" from="MarginContainer/HBoxContainer/CraftButtonMargin/CraftButton" to="." method="_on_craft_button_pressed"]
